feat: adapt cloud 2.0.0